external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_head_ctor_3.exp
error[E03006]: unexpected name in this position
   ┌─ tests/development/enums/matching/invalid_head_ctor_3.move:16:13
   │
16 │             l::a(_) => (),
   │             ^^^^ Unexpected module member identifier. A module member identifier is not a valid variant

